# options-spread-analyzer

./: .env.example  .gitignore  .project_status.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULARIZATION_SUMMARY.md  README.md  check_environment.bat  fix_pydantic.bat  pyproject.toml  requirements.txt  run_app.bat  run_tests.bat  setup_dev.bat
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
data/: backtesting.db
docs/: INSTALLATION.md  USER_GUIDE.md
examples/: basic_usage.py
src/options_analyzer/: __init__.py  main.py
src/options_analyzer/analytics/: options_pricing.py
src/options_analyzer/backtesting/: __init__.py  backtest_engine.py  models.py  performance_analyzer.py  results_manager.py  strategy_tracker.py
src/options_analyzer/config/: asset_config.py  constants.py  settings.py  settings.py.backup
src/options_analyzer/core/: options_strategies.py  paper_trading.py  risk_management.py
src/options_analyzer/data/: market_data.py
src/options_analyzer/ui/components/: asset_selector.py  sidebar.py
src/options_analyzer/ui/pages/: backtesting.py  home.py  paper_trading.py  position_monitor.py  strategy_analyzer.py
src/options_analyzer/ui/pages/strategy_analyzer/: README.md  __init__.py  main.py  market_analysis.py  position_analysis.py  results_renderer.py  strategy_calculations.py  strategy_inputs.py
src/options_analyzer/utils/: helpers.py
src/options_analyzer/visualization/: charts.py
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/unit/: test_strategies.py
